# ChangeLog for sys-kernel/mm-sources
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.353 2007/11/14 11:47:38 voxus Exp $

*mm-sources-2.6.24_rc2-r1 (14 Nov 2007)

  14 Nov 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.24_rc2-r1.ebuild:
  Version bump.

*mm-sources-2.6.23-r1 (12 Oct 2007)

  12 Oct 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  -mm-sources-2.6.23_rc1-r1.ebuild, -mm-sources-2.6.23_rc1-r2.ebuild,
  -mm-sources-2.6.23_rc2-r1.ebuild, -mm-sources-2.6.23_rc2-r2.ebuild,
  -mm-sources-2.6.23_rc3-r1.ebuild, -mm-sources-2.6.23_rc4-r1.ebuild,
  -mm-sources-2.6.23_rc6-r1.ebuild, -mm-sources-2.6.23_rc7-r1.ebuild,
  -mm-sources-2.6.23_rc8-r1.ebuild, -mm-sources-2.6.23_rc8-r2.ebuild,
  +mm-sources-2.6.23-r1.ebuild:
  Version bump.

*mm-sources-2.6.23_rc8-r2 (27 Sep 2007)

  27 Sep 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc8-r2.ebuild:
  Version bump.

*mm-sources-2.6.23_rc8-r1 (26 Sep 2007)

  26 Sep 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc8-r1.ebuild:
  Version bump.

*mm-sources-2.6.23_rc7-r1 (25 Sep 2007)

  25 Sep 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc7-r1.ebuild:
  Version bump.

*mm-sources-2.6.23_rc6-r1 (18 Sep 2007)

  18 Sep 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc6-r1.ebuild:
  Version bump.

*mm-sources-2.6.23_rc4-r1 (02 Sep 2007)

  02 Sep 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc4-r1.ebuild:
  Version bump.

*mm-sources-2.6.23_rc3-r1 (23 Aug 2007)
*mm-sources-2.6.23_rc2-r2 (23 Aug 2007)

  23 Aug 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc2-r2.ebuild, +mm-sources-2.6.23_rc3-r1.ebuild:
  Version bump.

*mm-sources-2.6.23_rc2-r1 (09 Aug 2007)

  09 Aug 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.23_rc2-r1.ebuild:
  on bump.
