@@ -1,7 +1,9 @@
 DIST 2.6.23-mm1.bz2 6824532 RMD160 4a6db589169016136ebd0080939f0b9b39b96ca4 SHA1 7f04688984c608a485a61c39572ddcf1020183e3 SHA256 4289a7c6666ec644ac09c6604ae92309650dc8715fb29abab8eae36bc8cdde38
 DIST 2.6.24-rc2-mm1.bz2 2767226 RMD160 8530bfa7c05dce650db5d599d2a7855e4a4a69ee SHA1 f971879705555e6590019ca35681e34416bddd23 SHA256 dd1657116cbc0dc32ffc257158cbad0ab586f2610eafd7b6bb5994db9e41c126
+DIST 2.6.24-rc3-mm1.bz2 2844356 RMD160 be713d7ba368e4acfec3759f68179b1e705e0c83 SHA1 742fe05a1dfa9d192169fdc744bbc7bbe2aaa828 SHA256 f51410891e4332c234de58407d485aa8aba4380eb9e21fc47dd74292dcc4ef46
 DIST linux-2.6.23.tar.bz2 45488158 RMD160 755690e80751d5de86d260fe05c6eeadde116c4e SHA1 3a186adf13e44415796ab6381aa8979b16a5d5ca SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb
 DIST patch-2.6.24-rc2.bz2 9161681 RMD160 738119066eb1b91ac6e4db299dd81e469412f019 SHA1 b9a44371004907b87f17d8db52afb17a22669f96 SHA256 c316760b5489af874cfc0fdba4b0d9aacf597abeb94a871a6fbaf9876b7e4fd6
+DIST patch-2.6.24-rc3.bz2 9400638 RMD160 33451d823d42361571fb2095119dd0ef62d9f1a8 SHA1 7f77a35eecf6572f87c75be9132811383a628784 SHA256 d37b8acfb42f81052badfb9bb6d7cc9697a31cd469cc6d9dc4bb046a150cae30
 EBUILD mm-sources-2.6.23-r1.ebuild 1014 RMD160 b851b3c99fe497feee9d6cd3ed7e9260cc12f438 SHA1 fa11d26cea34ebd78fdea1c1257b91798bc21adb SHA256 24932dbe2da5f65e59dc7650a23851a5212b99ede2085db9b794db6f9393af96
 MD5 da1173a04629b933f0de79256e51d7d4 mm-sources-2.6.23-r1.ebuild 1014
 RMD160 b851b3c99fe497feee9d6cd3ed7e9260cc12f438 mm-sources-2.6.23-r1.ebuild 1014
@@ -10,10 +12,14 @@ EBUILD mm-sources-2.6.24_rc2-r1.ebuild 1018 RMD160 bf60c007e54f3c5531ac15da3a59d
 MD5 6c3a1380475f077b45b0976b7a9eda66 mm-sources-2.6.24_rc2-r1.ebuild 1018
 RMD160 bf60c007e54f3c5531ac15da3a59d2310b5266a6 mm-sources-2.6.24_rc2-r1.ebuild 1018
 SHA256 eb9d49da02cd5de9f3bce18993e79cef8cc1e818ad412f68599ac32eefe3d41e mm-sources-2.6.24_rc2-r1.ebuild 1018
-MISC ChangeLog 63259 RMD160 583efa613b1b79df52642ca8b01a3e3e2a659c92 SHA1 3653ea54c26b2b428a6564fc07aab6c56ff64a4d SHA256 2b8c065c418e6622ce1da4e1c66d4471b8114a97a788470bab341ae9b4aab168
-MD5 d21010f8b30614cc26db42b5f1a069dd ChangeLog 63259
-RMD160 583efa613b1b79df52642ca8b01a3e3e2a659c92 ChangeLog 63259
-SHA256 2b8c065c418e6622ce1da4e1c66d4471b8114a97a788470bab341ae9b4aab168 ChangeLog 63259
+EBUILD mm-sources-2.6.24_rc3-r1.ebuild 1018 RMD160 09646639d41fff542d99c33f78e38f05037921f3 SHA1 209005d4989d289560a5b1241218466c8224ff0d SHA256 3c6b4f7e6c8960a1a0b10c16aad8fe59f0f380b92cb692fa431244be3943bd9e
+MD5 85cee08113531d96a36056ceb7f86fae mm-sources-2.6.24_rc3-r1.ebuild 1018
+RMD160 09646639d41fff542d99c33f78e38f05037921f3 mm-sources-2.6.24_rc3-r1.ebuild 1018
+SHA256 3c6b4f7e6c8960a1a0b10c16aad8fe59f0f380b92cb692fa431244be3943bd9e mm-sources-2.6.24_rc3-r1.ebuild 1018
+MISC ChangeLog 63410 RMD160 b5854c86346827929762cd8e1f845ed126c8c3be SHA1 9c57f8267c887d3a44064521036aa860c15bde91 SHA256 53e598c226fefcc0acb8890f418763ef3817554585ad86e2e6e1ccb37f1cb654
+MD5 2b8c2a842e789a884796a4f3608da4e1 ChangeLog 63410
+RMD160 b5854c86346827929762cd8e1f845ed126c8c3be ChangeLog 63410
+SHA256 53e598c226fefcc0acb8890f418763ef3817554585ad86e2e6e1ccb37f1cb654 ChangeLog 63410
 MISC metadata.xml 615 RMD160 e12037df5308eb90511d39912c66a6970047412c SHA1 f082363b1c5c0174cd75cdef73854fb033c23f0f SHA256 04a2daff571b3cee361db0fcfdfe0989f62f8ffe98655bf82a996aa5da5da166
 MD5 7e2f7cba70ce4805a8af41a3843a525d metadata.xml 615
 RMD160 e12037df5308eb90511d39912c66a6970047412c metadata.xml 615
@@ -24,3 +30,6 @@ SHA256 7ee5698402dc5ef05478939291b484b62ee15210c71a515a21abf71735c61085 files/di
 MD5 9645c7473d3e2e8ba2d90d683dcb123f files/digest-mm-sources-2.6.24_rc2-r1 729
 RMD160 2c16e190903f528cde34f3317e5346fb77ef1925 files/digest-mm-sources-2.6.24_rc2-r1 729
 SHA256 91343a0f3f3e0a59d6a37a3c284fce07a861cf5f293fb4df44022474eddefc4c files/digest-mm-sources-2.6.24_rc2-r1 729
+MD5 7b87730a1930944b3b34592b4cadb2ed files/digest-mm-sources-2.6.24_rc3-r1 729
+RMD160 d5a71a2290efbff0070aa87884506d7337957002 files/digest-mm-sources-2.6.24_rc3-r1 729
+SHA256 d545661c0ed391b1b1442ee086c096c6e4d82f12b6b2344e7665050f412c7a66 files/digest-mm-sources-2.6.24_rc3-r1 729
