@@ -1,0 +1,9 @@
+MD5 ccf03814179a7e64bfb0d9a79c4dfc90 2.6.24-rc3-mm1.bz2 2844356
+RMD160 be713d7ba368e4acfec3759f68179b1e705e0c83 2.6.24-rc3-mm1.bz2 2844356
+SHA256 f51410891e4332c234de58407d485aa8aba4380eb9e21fc47dd74292dcc4ef46 2.6.24-rc3-mm1.bz2 2844356
+MD5 2cc2fd4d521dc5d7cfce0d8a9d1b3472 linux-2.6.23.tar.bz2 45488158
+RMD160 755690e80751d5de86d260fe05c6eeadde116c4e linux-2.6.23.tar.bz2 45488158
+SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb linux-2.6.23.tar.bz2 45488158
+MD5 b9a66b38fdfa600112f0c6172440a179 patch-2.6.24-rc3.bz2 9400638
+RMD160 33451d823d42361571fb2095119dd0ef62d9f1a8 patch-2.6.24-rc3.bz2 9400638
+SHA256 d37b8acfb42f81052badfb9bb6d7cc9697a31cd469cc6d9dc4bb046a150cae30 patch-2.6.24-rc3.bz2 9400638
