@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.353 2007/11/14 11:47:38 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.354 2007/11/21 10:44:36 voxus Exp $
+
+*mm-sources-2.6.24_rc3-r1 (21 Nov 2007)
+
+  21 Nov 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
+  +mm-sources-2.6.24_rc3-r1.ebuild:
+  Version bump.
 
 *mm-sources-2.6.24_rc2-r1 (14 Nov 2007)
 
